gitops/tenants/tenant2/overlays/prod/ordering-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordering-service
spec:
  template:
    spec:
      containers:
      - name: ordering-service
