gitops/tenants/tenant2/overlays/prod/ordering-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordering-ingress
spec:
  rules:
  - host: tenant2.prod.tenark.com
  tls:
  - hosts:
    - tenant2.prod.tenark.com
    secretName: keyvault-ordering-ingress-prod
