gitops/tenants/tenant2/overlays/prod/recommendation-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recommendation-ingress
spec:
  rules:
  - host: recommendation.tenant2.prod.tenark.com
  tls:
  - hosts:
    - recommendation.tenant2.prod.tenark.com
    secretName: keyvault-recommendation-ingress-prod
